minor css changes to avoid redundant spacing

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ a {
 }
 
 .name {
-  margin: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .title {
@@ -49,6 +49,8 @@ a {
   width: 80%;
   justify-content: center;
   align-items: center;
+  min-height: 700px;
+  max-height: 80vh;
 }
 
 .content, .profile-photo {
